Closed Bug 993475 Opened 10 years ago Closed 10 years ago

Basic compositor doesn't support masks on color layers

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: cwiiis, Assigned: cwiiis)

References

Details

Attachments

(2 files, 1 obsolete file)

As stated in the bug title. Patch incoming.
hmm, I said patch incoming, but my patch doesn't work completely yet... Will attach the WIP.
Took me an embarrassingly long time to work this out :p
Attachment #8403383 - Attachment is obsolete: true
Attachment #8403986 - Flags: review?(matt.woodrow)
Comment on attachment 8403986 [details] [diff] [review]
Support masks on color layers in BasicCompositor

Review of attachment 8403986 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/basic/BasicCompositor.cpp
@@ +328,5 @@
> +      } else {
> +        dest->FillRect(aRect,
> +                       ColorPattern(effectSolidColor->mColor),
> +                       DrawOptions(aOpacity));
> +      }

Looks good, bonus points if you can share the code between this and FillRectWithMask (in BasicLayersImpl.cpp).
Attachment #8403986 - Flags: review?(matt.woodrow) → review+
I like the idea of bonus points, and hadn't seen BasicLayersImpl... Open to ideas for doing this in a less verbose way, but I couldn't quickly think of anything.
Attachment #8404849 - Flags: review?(matt.woodrow)
Attachment #8404849 - Flags: review?(matt.woodrow) → review+
Blocks: 995216
https://hg.mozilla.org/mozilla-central/rev/9f419e249a07
https://hg.mozilla.org/mozilla-central/rev/16803b53b8a5
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Depends on: 996093
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: