Bug 993475 - Consolidate masking code in BasicCompositor and BasicLayersImpl. r=mattwoodrow